# urfu_ml_backend

./: .gitignore  .pre-commit-config.yaml  Athors.md  Dockerfile  README.md  authors.md  demo.py  demo_web.py  docker-compose.yaml  env_setup.ps1  env_setup.sh  fastAPI.py  image_classification.py  nlp_model.py  pyproject.toml  requirements.txt  requirments.txt  run.py  sample_model.py  settings.py  setup.cfg  streamlit_demo.py
.github/workflows/: run_linters.yml  run_lints_and_tests_.yml  run_tests_.yml
api/models/: basic.py
ml_models/: predict_sentiments.py
models/: predict_sentiment.py
src/: backend.py  custom_exceptions.py  main.py  streamlit_frontend.py
src/api/: custom_exceptions.py
src/api/handlers/: info_handler.py  predict_handler.py  root_handler.py
src/api/models/: basic.py  errors.py  predicted.py  to_predict.py
src/frontend/: constants.py
src/ml_models/: predict_languages.py  predict_sentiments.py  speech_recognition.py
tests/: conftest.py  test_info.py  test_prediction.py  test_root.py
