[tool.poetry]
name = "URFU_2022_GROUP_20_PROJECT"
version = "0.3.1"
description = "UrFU educational project"
authors = [
    "Vladimir Katin <katin.v.v.@gmail.com>",
    "Anna Bezhenar <asbezhenar@gmail.com>",
    "Anton Bessolitsyn <Anton.Bessolitsyn@hotmail.com>",
    "Alexander Orlov <eaglophone@gmail.com>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/urfuMagDS2022SFgroup/sf_data_science_python"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.25.1"
numpy = "^1.23.2"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.tensorflow]
optional = true

[tool.poetry.group.streamlit]
optional = true

[tool.poetry.group.backend]
optional = true

[tool.poetry.group.torch.dependencies]
torch = { version = "1.13.0", source = "torch" }
torchaudio = { version = "0.13.0", source = "torch" }
torchvision = { version = "0.14.0", source = "torch" }

[tool.poetry.group.tensorflow.dependencies]
tensorflow-cpu = "2.8.0"
protobuf = ">=3.9.2,<3.20"

[tool.poetry.group.streamlit.dependencies]
streamlit = "1.13.0"

[tool.poetry.group.backend.dependencies]
fastapi = "0.88.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
importlib = "^1.0.4"
librosa = "0.9.2"
datasets = "2.8.0"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
