[tool.black]
line-length = 120

[tool.poetry]
name = "URFU_2022_GROUP_20_PROJECT"
version = "0.6.5"
description = "UrFU educational project"
authors = [
    "Vladimir Katin <katin.v.v.@gmail.com>",
    "Anna Bezhenar <asbezhenar@gmail.com>",
    "Anton Bessolitsyn <Anton.Bessolitsyn@hotmail.com>",
    "Alexander Orlov <eaglophone@gmail.com>"
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/urfuMagDS2022SFgroup/sf_data_science_python"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.25.1"
numpy = "^1.23.2"
fastapi = "0.89.1"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
importlib = "^1.0.4"
pyhamcrest = "^2.0.4"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true

[tool.poetry.group.torch]
optional = true

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.torch.dependencies]
torch = { version = "1.13.1", source = "torch" }


[tool.poetry.group.dev.dependencies]
black = "22.12.0"
pre-commit = "2.21.0"
flake8 = "6.0.0"
isort = "5.11.4"

[tool.poetry.group.tests.dependencies]
pytest = "7.2.0"
httpx = "0.23.2"
pyhamcrest = "^2.0.4"



[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
